--- a/Application/Admin/View/Super/AdminLv2Lists.html
+++ b/Application/Admin/View/Super/AdminLv2Lists.html
@@ -3,7 +3,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
 
-    <title>菜单列表</title>
+    <title>管理员列表</title>
 
     <link href="/Public/Admin/css/mine.css" type="text/css" rel="stylesheet" />
     <style>
@@ -61,9 +61,9 @@
                         <td>{$vo.last_time}</td>
                         <td>{$vo.last_ip}</td>
                         <td>
-                            <a data-id="{$vo.id}" class="btn edit">修改</a>
-                            <a data-id="{$vo.id}" class="btn qxgl">权限</a>
-                            <a data-id="{$vo.id}" class="btn delete">删除</a>
+                            <a data-id="{$vo.id}" class="btn adminer_edit">修改</a>
+                            <a data-id="{$vo.id}" class="btn power_edit">权限</a>
+                            <a data-id="{$vo.id}" class="btn adminer_delete">删除</a>
                         </td>
                     </tr>
                 </volist>
@@ -76,47 +76,12 @@
 <script type="text/javascript" src="/Public/js/layer/layer.js"></script>
 <script>
     $(document).ready(function(){
-        $('.qxgl').click(function(){
-            // 用户id
-            var user_id = $(this).data('id');
-            // 获取用户现有权限
-            $.ajax({
-                url: "{:U('Super/getUserPowerLists')}",
-                type: 'POST',
-                dataType: 'json',
-                data: {user_id:user_id},
-                success:function(data){
-                    if ( data.status == 1 ) {
-                        user_power_lists = data.data;
-                    } else  {
-                        layer.msg( data.info );
-                        return false;
-                    }
-                }
-            });
-
-            // 获取所有权限
-            $.ajax({
-                url: "{:U('Super/getAllPowerLists')}",
-                type: 'POST',
-                dataType: 'json',
-                success:function(data){
-                    if ( data.status == 1 ) {
-                        menu_power_lists = data.data;
-                    } else  {
-                        layer.msg( data.info );
-                        return false;
-                    }
-                }
-            });
-
-            // 组织权限选择代码
-            var content_html = "<div class='main-table clearfix'>";
-            $.each( menu_power_lists, function (index, obj) {
-                alert(content_html);return false;
-            });
-
-
+        // 编辑角色权限
+        $('.power_edit').click(function(){
+            var adminer_id = $(this).data("id");
+            var set_adminer_power_url = "{:U('Super/setAdminerPower', '', '')}"+'/adminer_id/'+adminer_id;
+            self.location = set_adminer_power_url;
         });
+
     });
 </script>
